# trafikgrab

./: .gitignore  README.md  config.example.toml  pyproject.toml  tox.ini
src/daemon/: breaker.py  config.py  files.py  gtfs.py  http_client.py  logging.py  main.py  poller.py  quota.py  runtime.py  scheduler.py  state.py
systemd/: trafikgrab.service
tests/: conftest.py  test_breaker.py  test_config.py  test_files.py  test_gtfs.py  test_http_client.py  test_poller.py  test_quota.py  test_scheduler.py  test_smoke.py  test_state.py
